--- a/page3.html
+++ b/page3.html
@@ -70,7 +70,7 @@
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">
                 Who Am I ?</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2"></h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">I have been <strong>playing music</strong> since I could walk and <strong>writing music</strong> not soon after. I play <strong>Multiple instruments</strong> and <strong>numerous musical styles</strong> always changing it up to keep things fresh (I tend to get board easily). I got no problem playing <strong>guitar </strong>for a <strong>country gig </strong>or <strong>playing drums</strong> for an electronic group. I live to <strong>play music</strong> and <strong>tell storys</strong> through song.</p>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5">I have been <strong>playing music</strong> since I could walk and <strong>writing music</strong> not soon after. I play <strong>multiple instruments</strong> and <strong>numerous musical styles</strong> always changing it up to keep things fresh (I tend to get board easily). I got no problem playing <strong>guitar </strong>for a <strong>country gig </strong>or <strong>playing drums</strong> for an electronic group. I live to <strong>play music</strong> and <strong>tell storys</strong> through song.</p>
             
         </div>
     </div>
